fix greater banner spacing

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -13,6 +13,7 @@
 
 .wrapper-banner {
 	@extend .bg-beige;
+  overflow: hidden;
 	.banner-content {
     @include make-container;
     @extend .p-0;
